--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-actuacion-mt/control-y-tabla-actuacion-mt.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-actuacion-mt/control-y-tabla-actuacion-mt.component.html
@@ -18,9 +18,7 @@
     
             <ng-container matColumnDef="actuacion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Actuación </th>
-                <td mat-cell *matCellDef="let element" align="center"> 
-                    <div [innerHtml]="element.actuacionAdelantada"></div>
-                </td>
+                <td mat-cell *matCellDef="let element" align="center"> {{ element.actuacion }} </td>
             </ng-container>
     
             <ng-container matColumnDef="numeroActuacion">
