--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-actuaciones-no-tai/control-y-tabla-actuaciones-no-tai.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-actuaciones-no-tai/control-y-tabla-actuaciones-no-tai.component.html
@@ -42,14 +42,13 @@
                     <div *ngIf="element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo=='sin definir'">En
                         proceso de registro</div>
                     <div *ngIf="element.estadoActuacionCodigo=='2'">Finalizada</div>
-                    <div *ngIf="element.estadoActuacionCodigo=='3'">Enviado a comité técnico</div>
                 </td>
             </ng-container>
             <ng-container matColumnDef="gestion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 16%;"> Gestión </th>
                 <td mat-cell *matCellDef="let element">
                     <button mat-raised-button color="accent" class="btn-table"
-                        *ngIf="(element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo=='sin definir')&& element.registroCompletoActuacion=='Completo'"
+                        *ngIf="(element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo=='sin definir')&&element.registroCompletoActuacion=='Completo'"
                         (click)="this.finalizarAct(element.actuacionId)">
                         Finalizar actuación
                     </button>
@@ -64,7 +63,7 @@
                         Eliminar
                     </button>
                     <button mat-raised-button color="accent" class="btn-table"
-                        *ngIf="element.estadoActuacionCodigo!='1'"
+                        *ngIf="element.estadoActuacionCodigo=='2'"
                         (click)="this.verDetalleActuacion(element.actuacionId)">
                         Ver detalle
                     </button>
