--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-actuaciones-no-tai/control-y-tabla-actuaciones-no-tai.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-actuaciones-no-tai/control-y-tabla-actuaciones-no-tai.component.html
@@ -42,6 +42,7 @@
                     <div *ngIf="element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo=='sin definir'">En
                         proceso de registro</div>
                     <div *ngIf="element.estadoActuacionCodigo=='2'">Finalizada</div>
+                    <div *ngIf="element.estadoActuacionCodigo=='3'">Enviada a Comité Técnico</div>
                 </td>
             </ng-container>
             <ng-container matColumnDef="gestion">
