--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/crear-disponibilidad-presupuestal-administrativo/crear-administrativo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/crear-disponibilidad-presupuestal-administrativo/crear-administrativo.component.html
@@ -66,7 +66,13 @@
   </mat-card>
 
   <div class="d-flex align-items-center">
-    <div class="text-area-quill">
+    <div
+      class="text-area-quill"
+      [class.color-secondaryColor]="
+        (formulario.get('objeto').invalid && formulario.get('objeto').touched) ||
+        (formulario.get('objeto').invalid && estaEditando)
+      "
+    >
       <label for="alcanceParticular" class="text-area-quill--label">Objeto</label>
       <quill-editor
         class="quill-editor-style"
