debug avanceSemanal - :bug: sesionComentarioId 4.1.6.3

--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/form-solicitud/form-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/form-solicitud/form-solicitud.component.html
@@ -47,7 +47,7 @@
         </div>
         <div class="col" *ngIf="solicitudes.tipoSolicitudCodigo === tipoSolicitudCodigo.ActuacionesControversias">
           <b class="label-left color-blue">
-            {{ solicitudes.controversiaActuacion.controversiaContractual.numeroSolicitud }}
+            {{ solicitudes.controversiaActuacion !== undefined ? solicitudes.controversiaActuacion.controversiaContractual.numeroSolicitud : solicitudes.numeroSolicitud }}
           </b>
         </div>
       </div>
