--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/registro-fotografico/registro-fotografico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/registro-fotografico/registro-fotografico.component.html
@@ -105,7 +105,7 @@
     </div>
 </section>
 
-<section class="text-center table-responsive size-table" style="margin-top: 2em;" *ngIf="dataHistorial.length > 0">
+<section class="text-center table-responsive size-table" style="margin-top: 2em;" *ngIf="dataHistorial.length > 0 && esVerDetalle === false">
     <table mat-table [dataSource]="tablaHistorial" matSort>
   
         <ng-container matColumnDef="fechaRevision">
