--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/reporte-actividades/reporte-actividades.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/reporte-actividades/reporte-actividades.component.html
@@ -46,7 +46,7 @@
                 </div>
             </form>
 
-            <section class="text-center table-responsive size-table" style="margin-top: 2em;" *ngIf="dataHistorial.length > 0">
+            <section class="text-center table-responsive size-table" style="margin-top: 2em;" *ngIf="dataHistorial.length > 0 && esVerDetalle === false">
                 <table mat-table [dataSource]="tablaHistorial" matSort>
               
                     <ng-container matColumnDef="fechaRevision">
