--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-avance-financiero/tabla-avance-financiero.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-avance-financiero/tabla-avance-financiero.component.html
@@ -7,7 +7,7 @@
           </ng-container>
     
           <ng-container matColumnDef="valor">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20"> Valor </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20"> Facturación del mes </th>
             <td mat-cell *matCellDef="let element" align="center"> $ {{ element.valor }} </td>
           </ng-container>
     
