--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-avance-fisico/tabla-avance-fisico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-avance-fisico/tabla-avance-fisico.component.html
@@ -1,25 +1,53 @@
-<section *ngIf="sinRegistros === false">
-    <section class="text-center" *ngIf="esVerDetalle === false || true">
-        <div align="left">
-            <mat-card class="border">
-                <mat-card-content class="mt-1em">
-                    <section class="d-flex">
-                        <p class="ml-1em"><b>Programación acumulada de la obra</b>: {{ seguimientoSemanal.infoProyecto.programacionSemanal !== undefined ? seguimientoSemanal.infoProyecto.programacionSemanal + '%' : '' }}</p>
-                        <p class="ml-final-date"><b>Avance acumulado ejecutado de la obra</b>: {{ seguimientoSemanal.infoProyecto.avanceFisicoSemanal !== undefined ? seguimientoSemanal.infoProyecto.avanceFisicoSemanal + '%' : '' }}</p>
-                    </section>
-                </mat-card-content>
-            </mat-card>
+
+<section class="text-center" *ngIf="seguimientoSemanal.numeroSemana === primeraSemana && sinRegistros === false">
+    <div align="left">
+        <mat-card class="border">
+            <mat-card-content class="mt-1em">
+                <section class="d-flex">
+                    <p class="ml-1em"><b>Programación acumulada de la obra</b>: {{ seguimientoSemanal.infoProyecto.programacionSemanal !== undefined ? seguimientoSemanal.infoProyecto.programacionSemanal + '%' : 0 + '%' }}</p>
+                    <p class="ml-final-date"><b>Avance acumulado ejecutado de la obra</b>: {{ seguimientoSemanal.infoProyecto.avanceFisicoSemanal !== undefined ? seguimientoSemanal.infoProyecto.avanceFisicoSemanal + '%' : 0 + '%' }}</p>
+                </section>
+            </mat-card-content>
+        </mat-card>
+    </div>
+
+    <div class="text-center" style="width: 25%;display: inline-block;">
+        <button mat-raised-button color="accent" class="btn-table" (click)="openDialogObservaciones()" [disabled]="seguimientoSemanal.infoProyecto.avanceFisicoSemanal === undefined">
+            Ver avance acumulado por capítulo
+        </button>
+    </div>
+</section>
+
+<section class="text-center" *ngIf="seguimientoSemanal.numeroSemana !== primeraSemana">
+    <div align="left">
+        <mat-card class="border">
+            <mat-card-content class="mt-1em">
+                <section class="d-flex">
+                    <p class="ml-1em"><b>Programación acumulada de la obra</b>: {{ seguimientoSemanal.infoProyecto.programacionSemanal !== undefined ? seguimientoSemanal.infoProyecto.programacionSemanal + '%' : 0 + '%' }}</p>
+                    <p class="ml-final-date"><b>Avance acumulado ejecutado de la obra</b>: {{ seguimientoSemanal.infoProyecto.avanceFisicoSemanal !== undefined ? seguimientoSemanal.infoProyecto.avanceFisicoSemanal + '%' : 0 + '%' }}</p>
+                </section>
+            </mat-card-content>
+        </mat-card>
+    </div>
+
+    <div class="text-center" style="width: 25%;display: inline-block;">
+        <button mat-raised-button color="accent" class="btn-table" (click)="openDialogObservaciones()">
+            Ver avance acumulado por capítulo
+        </button>
+    </div>
+</section>
+
+<section class="table-responsive size-table" style="margin-top: 2em;" *ngIf="esVerDetalle === false">
+
+    <ng-container *ngIf="sinRegistros === true; else mostrarTabla">
+        <div class="d-flex justify-content-center align-items-center mt-1em" *ngIf="seguimientoSemanal.numeroSemana % 5 !== 0">
+            <img src="./assets/img/icon/sim.svg" class="img-size">
+            <p><small>No hay actividades para esta semana.</small></p>
         </div>
-    
-        <div class="text-center" style="width: 25%;display: inline-block;">
-            <button mat-raised-button color="accent" class="btn-table" (click)="openDialogObservaciones()">
-                Ver avance acumulado por capítulo
-            </button>
-        </div>
-    </section>
-    <section class="table-responsive size-table" style="margin-top: 2em;" *ngIf="esVerDetalle === false">
+    </ng-container>
+    <ng-template #mostrarTabla>
         <table mat-table [dataSource]="tablaAvanceFisico" matSort>
-      
+  
             <ng-container matColumnDef="semanaNumero">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Semana número </th>
               <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.semanaNumero }}</b> </td>
@@ -84,6 +112,7 @@
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
+
         <div class="text-center" style="margin-top: 2em;">
             <button mat-button
                     color="warn"
@@ -93,94 +122,102 @@
                     (click)="guardar()">
                     <img  src="assets/img/icon/guardar.svg">
             </button>
-          </div>
-    </section>
-    
-    <!-- Ver detalle -->
-    <section class="text-center table-responsive size-table" style="margin-top: 2em;" *ngIf="esVerDetalle === true">
-        <table mat-table [dataSource]="tablaAvanceFisico" matSort>
+        </div>
+    </ng-template>
+
+      <section class="text-center table-responsive size-table" style="margin-top: 2em;" *ngIf="dataHistorial.length > 0">
+        <table mat-table [dataSource]="tablaHistorial" matSort>
       
-            <ng-container matColumnDef="semanaNumero">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Semana número </th>
-              <td mat-cell *matCellDef="let element" align="center" class="color-text"> <b>{{ element.semanaNumero }}</b> </td>
+            <ng-container matColumnDef="fechaRevision">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Fecha de revisión </th>
+              <td mat-cell *matCellDef="let element" align="center" class="color-text"> <b>{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</b> </td>
             </ng-container>
       
-            <ng-container matColumnDef="periodoReporte">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Período del reporte </th>
-              <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.periodoReporte }} </td>
+            <ng-container matColumnDef="responsable">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Responsable de la observación </th>
+                <td mat-cell *matCellDef="let element" align="center" class="color-text">
+                    <ng-container *ngIf="element.esSupervisor === true; else noEsSupervisor">
+                        <p>Supervisor</p>
+                    </ng-container>
+                    <ng-template #noEsSupervisor>
+                        <p>Apoyo a la supervisión</p>
+                    </ng-template> 
+                </td>
             </ng-container>
       
-            <ng-container matColumnDef="programacionSemana">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Programación de la semana </th>
-              <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.programacionSemana }}% </td>
-            </ng-container>
-      
-            <ng-container matColumnDef="capitulo">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Capítulo </th>
-              <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
-                <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let capitulo of element.avancePorCapitulo">
-                  {{ capitulo.capitulo }}
-                </div>
+            <ng-container matColumnDef="historial">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Historial de observaciones </th>
+              <td mat-cell *matCellDef="let element" align="center" class="color-text">
+                  <section [innerHTML]="element.observacion"></section>
               </td>
-            </ng-container>
-      
-            <ng-container matColumnDef="programacionCapitulo">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Programación por capítulo </th>
-                <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
-                  <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let programacionCapitulo of element.avancePorCapitulo">
-                    {{ programacionCapitulo.programacionCapitulo }}%
-                  </div>
-                </td>
-            </ng-container>
-      
-            <ng-container matColumnDef="avanceFisicoCapitulo">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 14%;" class="back-color"> Avance físico por capítulo </th>
-                <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
-                  <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let avanceFisicoCapitulo of element.avancePorCapitulo">
-                    {{ avanceFisicoCapitulo.avanceFisicoCapitulo }}%
-                  </div>
-                </td>
-            </ng-container>
-    
-            <ng-container matColumnDef="avanceFisicoSemana">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Avance físico de la semana </th>
-                <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.avanceFisicoSemana + '%' }} </td>
             </ng-container>
         
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          <tr mat-header-row *matHeaderRowDef="displayedColumnsHistorial"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumnsHistorial;"></tr>
         </table>
-    </section>
+      </section>
+</section>
     
-    <section class="text-center table-responsive size-table" style="margin-top: 2em;" *ngIf="dataHistorial.length > 0">
-      <table mat-table [dataSource]="tablaHistorial" matSort>
-    
-          <ng-container matColumnDef="fechaRevision">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Fecha de revisión </th>
-            <td mat-cell *matCellDef="let element" align="center" class="color-text"> <b>{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</b> </td>
-          </ng-container>
-    
-          <ng-container matColumnDef="responsable">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Responsable de la observación </th>
-              <td mat-cell *matCellDef="let element" align="center" class="color-text">
-                  <ng-container *ngIf="element.esSupervisor === true; else noEsSupervisor">
-                      <p>Supervisor</p>
-                  </ng-container>
-                  <ng-template #noEsSupervisor>
-                      <p>Apoyo a la supervisión</p>
-                  </ng-template> 
-              </td>
-          </ng-container>
-    
-          <ng-container matColumnDef="historial">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Historial de observaciones </th>
-            <td mat-cell *matCellDef="let element" align="center" class="color-text">
-                <section [innerHTML]="element.observacion"></section>
-            </td>
-          </ng-container>
-      
-        <tr mat-header-row *matHeaderRowDef="displayedColumnsHistorial"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumnsHistorial;"></tr>
-      </table>
-    </section>
+<!-- Ver detalle -->
+<section class="text-center table-responsive size-table" style="margin-top: 2em;" *ngIf="esVerDetalle === true">
+  <ng-container *ngIf="sinRegistros === true; else mostrarTabla">
+    <div class="d-flex justify-content-center align-items-center mt-1em" *ngIf="seguimientoSemanal.numeroSemana % 5 !== 0">
+      <img src="./assets/img/icon/sim.svg" class="img-size">
+      <p><small>No hay actividades para esta semana.</small></p>
+    </div>
+  </ng-container>
+  <ng-template #mostrarTabla>
+    <table mat-table [dataSource]="tablaAvanceFisico" matSort>
+  
+      <ng-container matColumnDef="semanaNumero">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Semana número </th>
+        <td mat-cell *matCellDef="let element" align="center" class="color-text"> <b>{{ element.semanaNumero }}</b> </td>
+      </ng-container>
+
+      <ng-container matColumnDef="periodoReporte">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Período del reporte </th>
+        <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.periodoReporte }} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="programacionSemana">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Programación de la semana </th>
+        <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.programacionSemana }}% </td>
+      </ng-container>
+
+      <ng-container matColumnDef="capitulo">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Capítulo </th>
+        <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
+          <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let capitulo of element.avancePorCapitulo">
+            {{ capitulo.capitulo }}
+          </div>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="programacionCapitulo">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Programación por capítulo </th>
+          <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
+            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let programacionCapitulo of element.avancePorCapitulo">
+              {{ programacionCapitulo.programacionCapitulo }}%
+            </div>
+          </td>
+      </ng-container>
+
+      <ng-container matColumnDef="avanceFisicoCapitulo">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 14%;" class="back-color"> Avance físico por capítulo </th>
+          <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
+            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let avanceFisicoCapitulo of element.avancePorCapitulo">
+              {{ avanceFisicoCapitulo.avanceFisicoCapitulo }}%
+            </div>
+          </td>
+      </ng-container>
+
+      <ng-container matColumnDef="avanceFisicoSemana">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Avance físico de la semana </th>
+          <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.avanceFisicoSemana + '%' }} </td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </ng-template>
 </section>
