--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-consultar-editar-bitacora/tabla-consultar-editar-bitacora.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-consultar-editar-bitacora/tabla-consultar-editar-bitacora.component.html
@@ -60,8 +60,16 @@
             <button mat-raised-button
                     color="accent" 
                     class="btn-table"
-                    (click)="getVerDetalleAvance( element.seguimientoSemanalId )">
-                    {{ element.registroCompletoMuestras === true ? 'Ver detalle' : 'Ver detalle/Editar' }}
+                    *ngIf="element.registroCompletoMuestras === false"
+                    [routerLink]="[ 'verDetalleAvanceSemanal', element.seguimientoSemanalId ]">
+                    Ver detalle
+            </button>
+            <button mat-raised-button
+                    color="accent" 
+                    class="btn-table"
+                    *ngIf="element.registroCompletoMuestras !== false"
+                    [routerLink]="[ 'verDetalleAvanceSemanalMuestras', element.seguimientoSemanalId ]">
+                    Ver detalle/Editar
             </button>
             <button mat-raised-button
                     color="accent" 
