--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-actua-tramite-cc/control-y-tabla-actua-tramite-cc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-actua-tramite-cc/control-y-tabla-actua-tramite-cc.component.html
@@ -42,15 +42,21 @@
                     <div *ngIf="element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo=='sin definir'">En
                         proceso de registro</div>
                     <div *ngIf="element.estadoActuacionCodigo=='2'">Finalizada</div>
+                    <div *ngIf="element.estadoActuacionCodigo=='3'">Enviada a comité técnico</div>
                 </td>
             </ng-container>
             <ng-container matColumnDef="gestion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 16%;"> Gestión </th>
                 <td mat-cell *matCellDef="let element">
                     <button mat-raised-button color="accent" class="btn-table"
-                        *ngIf="(element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo=='sin definir')&&element.registroCompletoActuacion=='Completo'"
-                        (click)="this.enviarComiteTecnicoTramAct(element.actuacionId)">
+                        *ngIf="(element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo=='sin definir')&&element.registroCompletoActuacion=='Completo' && element.requiereComite==false"
+                        (click)="this.enviarComiteTecnicoTramAct(element.actuacionId,element.requiereComite)">
                         Finalizar actuación
+                    </button>
+                    <button mat-raised-button color="accent" class="btn-table"
+                        *ngIf="(element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo=='sin definir')&&element.registroCompletoActuacion=='Completo'  && element.requiereComite==true"
+                        (click)="this.enviarComiteTecnicoTramAct(element.actuacionId,element.requiereComite)">
+                        Enviar a comité técnico
                     </button>
                     <button mat-raised-button color="accent" class="btn-table"
                         *ngIf="element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo=='sin definir'"
@@ -63,7 +69,7 @@
                         Eliminar
                     </button>
                     <button mat-raised-button color="accent" class="btn-table"
-                        *ngIf="element.estadoActuacionCodigo=='2'"
+                        *ngIf="element.estadoActuacionCodigo=='2' || element.estadoActuacionCodigo=='3'"
                         (click)="this.verDetalleActuacion(element.actuacionId)">
                         Ver detalle
                     </button>
