--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-actuaciones-no-tai/control-y-tabla-actuaciones-no-tai.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-actuaciones-no-tai/control-y-tabla-actuaciones-no-tai.component.html
@@ -48,10 +48,15 @@
             <ng-container matColumnDef="gestion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 16%;"> Gestión </th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-raised-button color="accent" class="btn-table"
-                        *ngIf="(element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo=='sin definir')&&element.registroCompletoActuacion=='Completo'"
-                        (click)="this.finalizarAct(element.actuacionId)">
+                    <button mat-raised-button color="accent" class="btn-table" *ngIf="(element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo=='sin definir')&&element.registroCompletoActuacion=='Completo' 
+                        && element.requiereComite==false"
+                        (click)="this.finalizarAct(element.actuacionId,element.requiereComite)">
                         Finalizar actuación
+                    </button>
+                    <button mat-raised-button color="accent" class="btn-table" *ngIf="(element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo=='sin definir')&&element.registroCompletoActuacion=='Completo' 
+                    && element.requiereComite==true"
+                        (click)="this.finalizarAct(element.actuacionId,element.requiereComite)">
+                        Enviar a comité técnico
                     </button>
                     <button mat-raised-button color="accent" class="btn-table"
                         *ngIf="element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo=='sin definir'"
@@ -64,7 +69,7 @@
                         Eliminar
                     </button>
                     <button mat-raised-button color="accent" class="btn-table"
-                        *ngIf="element.estadoActuacionCodigo=='2'"
+                        *ngIf="element.estadoActuacionCodigo=='2' || element.estadoActuacionCodigo=='3'"
                         (click)="this.verDetalleActuacion(element.actuacionId)">
                         Ver detalle
                     </button>
