--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-mesas-trabajo-cc/control-y-tabla-mesas-trabajo-cc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-mesas-trabajo-cc/control-y-tabla-mesas-trabajo-cc.component.html
@@ -59,7 +59,7 @@
                     </button>
                     <button mat-raised-button color="accent" class="btn-table" *ngIf="element.estadoMesa=='2'"
                         (click)="this.actualizarMesaTrabajo(element.actuacionId,element.numeroMesa,element.mesaId)">
-                        Registrar nueva mesa de trabajo
+                        Actualizar mesa de trabajo
                     </button>
                     <button mat-raised-button color="accent" class="btn-table" *ngIf="element.estadoMesa=='2'"
                         (click)="this.verDetalleMesaTrabajo(element.actuacionId,element.numeroMesa,element.mesaId)">
