--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-actuacion-reclamacion/form-actuacion-reclamacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-actuacion-reclamacion/form-actuacion-reclamacion.component.html
@@ -8,8 +8,7 @@
                             <label class="label-left" for="estadoAvanceTramite" [class.color-secondaryColor]="
                             (addressForm.get('estadoAvanceTramite').invalid && addressForm.get('estadoAvanceTramite').touched) ||
                             (addressForm.get('estadoAvanceTramite').invalid && estaEditando)
-                          ">Estado de avance de la
-                                reclamación</label>
+                          ">Estado de avance de la reclamación</label>
                         </div>
                         <div class="col">
                             <mat-form-field class="select-width">
@@ -40,8 +39,7 @@
                             <label class="label-left" for="fechaActuacionAdelantada" [class.color-secondaryColor]="
                             (addressForm.get('fechaActuacionAdelantada').invalid && addressForm.get('fechaActuacionAdelantada').touched) ||
                             (addressForm.get('fechaActuacionAdelantada').invalid && estaEditando)
-                          ">Fecha de la actuación
-                                adelantada</label>
+                          ">Fecha de la actuación adelantada</label>
                         </div>
                         <div class="col d-flex align-items-center">
                             <mat-form-field class="example-full-width">
