ajustes seguimiento diario

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registro-seguimiento-diario/components/form-registrar-seguimiento/form-registrar-seguimiento.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registro-seguimiento-diario/components/form-registrar-seguimiento/form-registrar-seguimiento.component.html
@@ -817,9 +817,9 @@
       </mat-card-header>
       <mat-card-content>
 
-        ¿Tiene observaciones al registro del seguimiento diario?: <span>{{ 'Si' }}</span>
-        <br>
-        <p>
+        <!-- ¿Tiene observaciones al registro del seguimiento diario?: <span>{{ 'Si' }}</span>
+        <br> -->
+        <p> 
           {{ seguimiento.observacionDevolucion.observaciones }}
         </p>
 
