--- a/asivamosffie.web/asivamosffie/src/app/_pages/registro-seguimiento-diario/components/tabla-registro-seguimiento-diario/tabla-registro-seguimiento-diario.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registro-seguimiento-diario/components/tabla-registro-seguimiento-diario/tabla-registro-seguimiento-diario.component.html
@@ -83,6 +83,7 @@
                                     'info-text completo' :
                                   '' }}" 
                       type="button"
+                      (click)="VerBitacora( element )"
                       [routerLink]="[ 'verBitacora', element.contratacionProyectoId ]"
                       *ngIf="element.seguimientoDiarioId > 0">
         Ver bitácora
