--- a/asivamosffie.web/asivamosffie/src/app/_pages/registro-seguimiento-diario/components/ver-bitacora/ver-bitacora.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registro-seguimiento-diario/components/ver-bitacora/ver-bitacora.component.html
@@ -9,12 +9,12 @@
   </h1>
   <p class="colorMainColor mt-05em mb-2em">
     <span class="mx-1em">fecha de último reporte:
-      <b>05/07/2020</b>
+      <b> {{ proyecto.fechaUltimoSeguimientoDiario | date: 'dd/MM/yyyy' }}</b>
     </span>
-    <span class="mx-1em">Atlántico</span>
-    <span class="mx-1em">Malambo</span>
-    <span class="mx-1em">I.E. María Villa Campo</span>
-    <span class="mx-1em">Única sede</span>
+    <span class="mx-1em">{{ proyecto.departamento }}</span>
+    <span class="mx-1em">{{ proyecto.municipio }}</span>
+    <span class="mx-1em">{{ proyecto.institucionEducativa }}</span>
+    <span class="mx-1em">{{ proyecto.sede }}</span >
   </p>
 
   <div class="busqueda">
