--- a/asivamosffie.web/asivamosffie/src/app/_pages/registro-seguimiento-diario/components/ver-detalle-registro/ver-detalle-registro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registro-seguimiento-diario/components/ver-detalle-registro/ver-detalle-registro.component.html
@@ -1,7 +1,7 @@
 <section class="container text-center">
   <div class="text-right">
     <a (click)="volver()" 
-    routerLink="../../" mat-button color="primary" class="btn-regresar">
+    mat-button color="primary" class="btn-regresar">
       <img src="assets/img/icon/regresar.svg" alt="Regresar">
     </a>
   </div>
